feat: pages modification et annulation client - style widget multilingue
- Page /reservation/[token]/edit avec calendrier, options, traductions
- Page /reservation/[token]/cancel avec confirmation et avertissement
- Traductions complètes FR/NL/EN/DE/IT (edit_title, cancel_title, etc.)
- Format heures localisé (12h00 FR, 12u00 NL, 12:00 EN)
- Correction noms options (highChair, dogAccess, wheelchair)
- Fix scroll bug sur Toggle (button au lieu de div)
- Mise à jour documentation (progression 70%)

--- a/docs/AUDIT_MVP_2026-01-08.md
+++ b/docs/AUDIT_MVP_2026-01-08.md
@@ -1,6 +1,6 @@
 # Audit Complet MVP — La Moulinière
 
-**Date :** 8 janvier 2026
+**Date :** 17 janvier 2026 (mise à jour)
 
 ---
 
@@ -70,11 +70,12 @@
 | **Page gestion réservation** | `src/app/reservation/[token]/page.tsx` |
 | **Annulation via token** | ✅ |
 
-### ❌ NON FAIT — Frontend Client
+### ✅ FAIT — Pages Client Complémentaires (Mise à jour 17/01)
 
-| Fonctionnalité | Impact |
-|----------------|--------|
-| **Modification réservation** | Page `/reservation/[token]/edit` n'existe pas |
+| Fonctionnalité | Fichier | Notes |
+|----------------|---------|-------|
+| **Page modification réservation** | `src/app/reservation/[token]/edit/page.tsx` | Style widget, multilingue, options pré-cochées |
+| **Page annulation réservation** | `src/app/reservation/[token]/cancel/page.tsx` | Style widget, multilingue, confirmation |
 
 ---
 
@@ -121,8 +122,9 @@
    - Notification quand réservation `pending` créée
    - Trigger email `validated` / `refused` depuis admin
 
-3. **Page modification réservation client**
-   - `/reservation/[token]/edit`
+3. ~~**Page modification réservation client**~~ ✅ Terminé (17/01)
+   - `/reservation/[token]/edit` ✅
+   - `/reservation/[token]/cancel` ✅
 
 ### Priorité HAUTE
 
@@ -144,7 +146,7 @@
 | Composant | Effort estimé |
 |-----------|---------------|
 | **Interface Admin (Vue Service + CRUD)** | 3-4 jours |
-| **Page modification réservation client** | 0.5 jour |
+| ~~**Page modification réservation client**~~ | ~~0.5 jour~~ ✅ Terminé |
 | **Emails admin (notification pending + triggers)** | 0.5 jour |
 | **Cron email review J+1** | 0.5 jour |
 | **dailyFinalize** | 0.5 jour |
