feat(admin): Interface Admin Vue Service + tracking ponctualité
- Page /admin/reservations avec liste réservations par service
- Gestion statuts: pending → confirmed → seated → completed/incident
- Boutons d'actions primaires et secondaires selon statut
- Menu contextuel avec actions de restauration
- Nouveau statut 'incident' (empêche email review J+1)
- Table reservationEvents pour tracking ponctualité clients
- Query getPunctualityStats pour statistiques générales
- Affichage options (highChair, wheelchair, dogAccess) ordre fixe
- Affichage détaillé Pers. (adultes + enfants + bébés)
- Badge Hist. carré pour historique visites
- Drapeaux basés sur préfixe téléphone + langue

Docs: AUDIT_MVP, DEVBOOK, PROJECT_STATUS mis à jour (80%)

--- a/docs/AUDIT_MVP_2026-01-08.md
+++ b/docs/AUDIT_MVP_2026-01-08.md
@@ -1,6 +1,6 @@
 # Audit Complet MVP — La Moulinière
 
-**Date :** 17 janvier 2026 (mise à jour)
+**Date :** 18 janvier 2026 (mise à jour)
 
 ---
 
@@ -81,16 +81,17 @@
 
 ## 3. FRONTEND ADMIN — État d'implémentation
 
-### ❌ NON FAIT — Interface Admin
+### 🟡 EN COURS — Interface Admin
 
 | Fonctionnalité MVP | État |
 |--------------------|------|
-| **Vue Service journalière** | ❌ Pas de page `/admin` |
-| **Liste réservations du jour** | ❌ (API prête, UI manquante) |
-| **Gestion statuts** (pending → confirmed → seated → completed/noshow) | ❌ (API prête, UI manquante) |
+| **Vue Service journalière** | ✅ Page `/admin/reservations` créée |
+| **Liste réservations du jour** | ✅ Avec pagination, filtres service |
+| **Gestion statuts** (pending → confirmed → seated → completed/noshow/incident) | ✅ Boutons d'actions + menu contextuel |
 | **Attribution tables click-to-click** | ❌ (API prête, UI manquante) |
 | **Création réservation manuelle** | ❌ (API à exposer + UI) |
 | **Recherche client** | ❌ |
+| **Tracking événements (ponctualité)** | ✅ Table reservationEvents + query stats |
 
 ---
 
@@ -113,10 +114,10 @@
 ### Priorité CRITIQUE (bloquant)
 
 1. **Interface Admin complète**
-   - Vue Service (liste réservations jour/service)
-   - Gestion statuts avec boutons
-   - Attribution tables (click-to-click)
-   - Création réservation manuelle (téléphone/walk-in)
+   - ✅ Vue Service (liste réservations jour/service)
+   - ✅ Gestion statuts avec boutons
+   - ❌ Attribution tables (click-to-click)
+   - ❌ Création réservation manuelle (téléphone/walk-in)
 
 2. **Emails admin**
    - Notification quand réservation `pending` créée
@@ -145,11 +146,11 @@
 
 | Composant | Effort estimé |
 |-----------|---------------|
-| **Interface Admin (Vue Service + CRUD)** | 3-4 jours |
+| **Interface Admin (Vue Service + CRUD)** | ~~3-4 jours~~ 1-2 jours restants |
 | ~~**Page modification réservation client**~~ | ~~0.5 jour~~ ✅ Terminé |
 | **Emails admin (notification pending + triggers)** | 0.5 jour |
 | **Cron email review J+1** | 0.5 jour |
 | **dailyFinalize** | 0.5 jour |
 | **Tests + polish** | 1-2 jours |
 
-**Total estimé : 6-8 jours de développement**
+**Total estimé : 3-5 jours de développement restants**
