docs: ajouter note blocage email review si statut incident

--- a/docs/AUDIT_MVP_2026-01-08.md
+++ b/docs/AUDIT_MVP_2026-01-08.md
@@ -131,6 +131,7 @@
 
 4. **Email J+1 demande d'avis**
    - Cron `enqueueReviewEmails` à implémenter
+   - ⚠️ **Blocage si statut `incident`** : Le cron doit exclure les réservations avec `status === "incident"` pour ne pas envoyer de demande d'avis aux clients ayant eu un incident (table `reservationEvents` disponible pour audit)
 
 5. **dailyFinalize (no-show automatique)**
    - Marquer `confirmed` → `noshow` si slot passé
