docs: Mise à jour documentation MVP (88%) - Plan de salle terminé

--- a/docs/AUDIT_MVP_2026-01-08.md
+++ b/docs/AUDIT_MVP_2026-01-08.md
@@ -1,6 +1,6 @@
 # Audit Complet MVP — La Moulinière
 
-**Date :** 18 janvier 2026 (mise à jour)
+**Date :** 21 janvier 2026 (mise à jour)
 
 ---
 
@@ -28,6 +28,11 @@
 | | `admin.updateReservation` (status + tables) | `convex/admin.ts` |
 | | State machine transitions | `convex/lib/stateMachine.ts` |
 | **Slots** | `slots.seedRange` / `closeRange` / `openRange` | `convex/slots.ts` |
+| **Plan de salle** | `floorplan.getTableStates` (statuts temps réel) | `convex/floorplan.ts` |
+| | `floorplan.assign` (assignation tables) | `convex/floorplan.ts` |
+| | `floorplan.checkAssignment` (validation) | `convex/floorplan.ts` |
+| **Tables** | `tables.list` / `create` / `update` / `delete` | `convex/tables.ts` |
+| | `tables.updatePosition` (drag & drop) | `convex/tables.ts` |
 | **Crons** | Email queue (1 min) | `convex/crons.ts` |
 | | Rappels J-1 (18h) | ✅ |
 | | Cleanup (4h) | ✅ |
@@ -88,7 +93,7 @@
 | **Vue Service journalière** | ✅ Page `/admin/reservations` créée |
 | **Liste réservations du jour** | ✅ Avec pagination, filtres service |
 | **Gestion statuts** (pending → confirmed → seated → completed/noshow/incident) | ✅ Boutons d'actions + menu contextuel |
-| **Attribution tables click-to-click** | ❌ (API prête, UI manquante) |
+| **Attribution tables click-to-click** | ✅ Plan de salle interactif + combinaison intelligente |
 | **Création réservation manuelle** | ❌ (API à exposer + UI) |
 | **Recherche client** | ❌ |
 | **Tracking événements (ponctualité)** | ✅ Table reservationEvents + query stats |
@@ -116,7 +121,7 @@
 1. **Interface Admin complète**
    - ✅ Vue Service (liste réservations jour/service)
    - ✅ Gestion statuts avec boutons
-   - ❌ Attribution tables (click-to-click)
+   - ✅ Attribution tables (click-to-click) — Plan de salle interactif terminé (21/01)
    - ❌ Création réservation manuelle (téléphone/walk-in)
 
 2. **Emails admin**
@@ -147,11 +152,14 @@
 
 | Composant | Effort estimé |
 |-----------|---------------|
-| **Interface Admin (Vue Service + CRUD)** | ~~3-4 jours~~ 1-2 jours restants |
-| ~~**Page modification réservation client**~~ | ~~0.5 jour~~ ✅ Terminé |
+| ~~**Interface Admin (Vue Service + CRUD)**~~ | ~~3-4 jours~~ ✅ Terminé (21/01) |
+| ~~**Page modification réservation client**~~ | ~~0.5 jour~~ ✅ Terminé (17/01) |
+| ~~**Plan de salle interactif**~~ | ~~1-2 jours~~ ✅ Terminé (21/01) |
+| **Bug primaryTableId** | 0.5 jour |
+| **Création réservation manuelle** | 0.5 jour |
 | **Emails admin (notification pending + triggers)** | 0.5 jour |
 | **Cron email review J+1** | 0.5 jour |
 | **dailyFinalize** | 0.5 jour |
 | **Tests + polish** | 1-2 jours |
 
-**Total estimé : 3-5 jours de développement restants**
+**Total estimé : 1-2 jours de développement restants**
