docs: mise à jour complète documentation - audit 16/02/2026, application en production

--- a/docs/AUDIT_MVP_2026-01-08.md
+++ b/docs/AUDIT_MVP_2026-01-08.md
@@ -1,6 +1,6 @@
 # Audit Complet MVP — La Moulinière
 
-**Date :** 22 janvier 2026 (mise à jour)
+**Date :** 16 février 2026 (mise à jour)
 
 ---
 
@@ -118,9 +118,9 @@
 
 ---
 
-## 5. SYNTHÈSE — MVP COMPLET ✅
+## 5. SYNTHÈSE — APPLICATION EN PRODUCTION ✅
 
-### ✅ Tout est terminé
+### ✅ MVP Complet + Améliorations Post-Release
 
 1. **Interface Admin complète** ✅
    - ✅ Vue Service (liste réservations jour/service)
@@ -150,10 +150,29 @@
    - ✅ Prédictions ML (scoring V0 rule-based)
    - ✅ Shadow metrics pour comparaison
 
-### Nice-to-have (post-MVP)
+7. **Interface Tablette** ✅ Terminé (02/02)
+   - ✅ `/admin-tablette` — iPad paysage optimisé
+   - ✅ CalendarPopup responsive iPad mini/Pro
+   - ✅ Sélection automatique service selon l'heure
+
+8. **Interface Mobile** ✅ Terminé (02/02)
+   - ✅ `/admin-mobile` — iPhone optimisé
+   - ✅ PWA icons avec logo La Moulinière
+
+9. **Migration NextAuth** ✅ Terminé (02/02)
+   - ✅ Remplacement de Clerk par NextAuth credentials
+   - ✅ Auth simplifiée (email/password)
+
+10. **Améliorations Widget** ✅ Terminé (03/02)
+    - ✅ Popup fermeture (`ClosureNoticeModal.tsx`) multilingue
+    - ✅ Filtrage créneaux passés (timezone-aware)
+    - ✅ Badges CRM (NEW/Regular/VIP selon totalVisits)
+
+### Nice-to-have (backlog)
 
 - **Inbound email (réponse client → message admin)** — Webhook Resend
 - **Recherche client** — Autocomplétion par nom/email/téléphone
+- **Analytics avancées** — Dashboard dynamique
 
 ---
 
@@ -169,6 +188,11 @@
 | ~~**Emails admin (notification pending + triggers)**~~ | ~~0.5 jour~~ ✅ Terminé (22/01) |
 | ~~**Cron email review J+1**~~ | ~~0.5 jour~~ ✅ Terminé (22/01) |
 | ~~**dailyFinalize**~~ | ~~0.5 jour~~ ✅ Terminé (22/01) |
-| **Tests + polish** | 1-2 jours |
+| ~~**Tests + polish**~~ | ~~1-2 jours~~ ✅ Terminé (24/01) |
+| ~~**Interface Tablette**~~ | ~~1 jour~~ ✅ Terminé (02/02) |
+| ~~**Interface Mobile**~~ | ~~1 jour~~ ✅ Terminé (02/02) |
+| ~~**Migration NextAuth**~~ | ~~0.5 jour~~ ✅ Terminé (02/02) |
+| ~~**Améliorations Widget**~~ | ~~0.5 jour~~ ✅ Terminé (03/02) |
+| ~~**Calendrier tablette responsive**~~ | ~~0.5 jour~~ ✅ Terminé (05/02) |
 
-**Total estimé : MVP fonctionnel complet — Tests et polish restants**
+**Total : APPLICATION EN PRODUCTION — Aucun travail bloquant restant**
